[gd_scene format=3 uid="uid://d32l8rtuuhpmy"]

[ext_resource type="Script" uid="uid://qvma7m2dg0un" path="res://hud.gd" id="1_64ctp"]
[ext_resource type="FontFile" uid="uid://nw0dhy4c6t3o" path="res://fonts/Xolonium-Regular.ttf" id="2_8sq4i"]

[sub_resource type="InputEventAction" id="InputEventAction_64ctp"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_8sq4i"]
events = [SubResource("InputEventAction_64ctp")]

[node name="HUD" type="CanvasLayer" unique_id=84231853]
script = ExtResource("1_64ctp")

[node name="ScoreLabel" type="Label" parent="." unique_id=2103883676]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 78.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_8sq4i")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScoreLabel" type="Label" parent="." unique_id=1623774561]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -25.0
offset_bottom = 43.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("2_8sq4i")
theme_override_font_sizes/font_size = 35
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="." unique_id=1614300194]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -37.5
offset_right = 240.0
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "Dodge the Fishes!	"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="." unique_id=2006109384]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -140.0
offset_right = 100.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 25
shortcut = SubResource("Shortcut_8sq4i")
text = "Start"

[node name="MessageTimer" type="Timer" parent="." unique_id=1709370397]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="on_start_button_pressed"]
